--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_application_1">
+    package="com.example.gg">
    <application
-        android:label="flutter_application_1"
+        android:label="gg"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
